plugins {
    id 'application'
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    // Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.2'

    // JUnit 5
    testImplementation libs.junit.jupiter
    testRuntimeOnly  libs.junit.platform.launcher 
    
    // Logging
    implementation libs.slf4j.api
    implementation libs.logback.classic
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'ou.capstone.notams.App'
}

tasks.named('test') {
    useJUnitPlatform()
    // Set environment variable to use mock data for all tests by default
    environment 'USE_MOCK_DATA', 'true'
}

// Task to run integration tests that require live API access
task integrationTest(type: Test) {
    useJUnitPlatform()
    // Don't set USE_MOCK_DATA for integration tests - they should use live API
    // Only run tests tagged with 'integration'
    systemProperty 'junit.jupiter.includeTags', 'integration'
    systemProperty 'junit.jupiter.execution.parallel.enabled', 'false'
    // Only include the specific integration test
    include '**/GeoJsonReaderTest.fetchesLiveNotams_viaConnectToAPI_andParses'
}
